infrastructure/storage/juicefs-s3-gateway/gateway-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: juicefs-s3-gateway
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.dcxxiv.com`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: juicefs-s3-gateway
          port: 9000
  tls:
    secretName: s3-tls
